fix: vertical alignment for containers

--- a/src/components/Common/common.css
+++ b/src/components/Common/common.css
@@ -10,24 +10,23 @@ details > summary:focus {
     .lil-container {
         @apply lil-w-full;
         max-width: 1440px;
-        padding: 0 135px;
-        margin: 0 auto;
+        padding-left: 135px;
+        padding-right: 135px;
+        @apply lil-mx-auto;
     }
 }
 @screen lg {
     .lil-container {
-        padding: 0 24px;
-        margin: 0 auto;
+        @apply lil-px-6 lil-mx-auto;
     }
 }
 @screen md {
     .lil-container {
-        padding: 0 24px;
-        margin: 0 auto;
+        @apply lil-px-6 lil-mx-auto;
     }
 }
 @screen sm {
     .lil-container {
-        padding: 0 24px;
+        @apply lil-px-6;
     }
 }
